--- a/src/components/patient-details.scss
+++ b/src/components/patient-details.scss
@@ -1,17 +1,10 @@
-@import 'carbon-components/css/carbon-components.css';
-@import 'carbon-components/scss/globals/scss/typography.scss';
+@use '@carbon/styles/scss/spacing';
+@use '@carbon/styles/scss/type';
 @import "~@openmrs/esm-styleguide/src/vars";
-
 
 .patientDetailsContainer > div {
   margin-bottom: 1rem;
 }
-
-
-
-
-
-
 
 .container {
   border-bottom: 0.063rem solid $ui-03;
@@ -27,9 +20,8 @@
 }
 
 .patientName {
-  @include carbon--type-style('productive-heading-03');
+  @include type.type-style('heading-03');
   margin-right: 0.25rem;
-  color: $text-01;
 }
 
 .patientAvatar {
@@ -52,7 +44,7 @@
 }
 
 .demographics {
-  @include carbon--type-style('body-short-02');
+  @include type.type-style('body-compact-02');
   color: $text-02;
   margin-top: 0.375rem;
 }
@@ -65,7 +57,7 @@
 }
 
 .patientNameRow {
-  margin-top: $spacing-05;
+  margin-top: spacing.$spacing-05;
 }
 
 .flexRow {
@@ -75,7 +67,7 @@
 }
 
 .identifiers {
-  @include carbon--type-style('body-short-02');
+  @include type.type-style('body-compact-02');
   color: $ui-04;
   margin-top: 0.375rem;
 }
@@ -89,7 +81,7 @@
 }
 
 .actionsButtonText {
-  @include carbon--type-style('body-short-01');
+  @include type.type-style('body-compact-01');
   color: $interactive-01;
 }
 
